# phononplay

./: CMakeLists.txt  README.md
play/: CMakeLists.txt  phononplay.cpp
src/: CMakeLists.txt  phononplay.cpp  vlcplay.c
